Agregué las imágenes a Contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,114 +4,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HUGO - ¿Cómo ser CDCD?</title>
-    <link rel="shortcut icon" href="../assets/imagenes/logo_hugo_icon.png" type="image/x-icon">
+    <title>Contacto</title>
+    <link rel="shortcut icon" href="../assets/imagenes/home_orient_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
-<body class="bodySerCreador">
+<body>
     <header>
-        <a href="../index.html" class="logoHugo">
-            <img src="../assets/imagenes/Logo_hugo.png" alt="Logo HUGO">
-        </a>
-        <nav>
-            <a href="#"><img src="../assets/imagenes/barra_de_busqueda2.png" class="barraDeBusqueda"
-                    alt="Barra de búsqueda"></a>
-            <a href="../index.html">Inicio</a>
-            <a href="./novedades.html">Novedades</a>
-            <a href="./masdescargadas.html">Más descargadas</a>
-            <a href="./categorias.html">Categorías</a>
-        </nav>
+        <section class="barra-de-navegacion">
+            <div class="logo-esquina">
+                <a href="../index.html"><img src="../assets/imagenes/home.png" alt="Inicio"></a>
+            </div>
+            <div>
+                <nav class="nav-cursos">
+                    <ul>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="./cursos.html">Cursos</a></li>
+                        <li><a href="./examenes.html">Exámenes simulacro</a></li>
+                        <li><a href="./material.html">Material</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
     </header>
     <main>
-        <section class="sectionMensajeDeBienvenida">
-            <h5>Bienvenido, para ser creador lee atentamente.</h5>
+        <section>
+            <div class="titulos-superiores-contacto">
+                <h2>¡Siempre puedes contar con nosotros!</h2>
+                <h1>
+                    CONTÁCTANOS:
+                </h1>
+            </div>
         </section>
-        <section class="sectionTituloDeCreador">
-            <article>
-                <div class="tituloSerCreador">
-                    <h1>¿CÓMO CONVERTIRSE EN CREADOR DE ARTE DIGITAL PARA HUGO©?</h1>
-                </div>
-                <div class="sectionParrafoUno">
-                    <p>En HUGO no solo contamos con contenido donado para compartir con nuestra comunidad, sino que
-                        también
-                        contamos con creadores de arte digital, fotógrafos profesionales y diseñadores gráficos, entre
-                        otras profesiones,
-                        y eres tú quien decides si deseas obtener remuneración por tu trabajo o donarlo para ser
-                        compartido.
-                    </p>
-                </div>
-                <div class="sectionParrafoDos">
-                    <p>Para aplicar como Creador de Arte Digital (CDD), solamente debes de llenar el siguiente
-                        formulario indicando tu nombre,
-                        correo personal, datos de contacto, qué tipo de contenido planeas aportar y si deseas que tu
-                        trabajo
-                        sea remunerado o no (si eliges que no y luego te arrepientes, no te preocupes que podrás
-                        notificarnos
-                        y cambiarlo).
-                    </p>
-                </div>
-                <div class="sectionParrafoTres">
-                    <p>Una vez revisada tu solicitud, nos contactaremos a alguno de los medios que nos dejaste y te
-                        solicitaremos enviarnos de 3 a 5 fotografías o proyectos de tu autoría.
-                    </p>
-                    <section class="datosDeTexto">
-                        <div>
-                            <label for="nombre">Nombre:</label>
-                            <input type="text" id="nombre" placeholder="Escribe tu nombre completo" size="31.25rem" required>
-                        </div>
-                        <div>
-                            <label for="email">Correo electrónico:</label>
-                            <input type="email" id="email" placeholder="Escribe tu mail" size="31.25rem" required>
-                        </div>
-                        <div>
-                            <label for="contacto">Datos de contacto adicionales:</label>
-                            <input type="text" id="contacto" placeholder="Segundo e-mail, teléfono..." size="31.25rem" required>
-                        </div>
-                    </section>
-                    <section class="datosDeOpcionMultiple">
-                        <div>
-                        <p>¿Qué tipo de contenido digital deseas aportar?</p>
-                        </div>
-                        <div>
-                        <label for="fotografia">Fotografías</label>
-                        <input type="radio" id="fotografia" name="contenido" value="fotografia" required>
-                        <label for="arteDigital">Arte Digital</label>
-                        <input type="radio" id="arteDigital" name="contenido1" value="arteDigital" required>
-                        <label for="disenoGrafico">Diseño Gráfico</label>
-                        <input type="radio" id="disenoDigital" name="contenido2" value="disenoGrafico" required>
-                        </div>
-                        <div>
-                        <p>¿Deseas obtener remuneración?</p>
-                        <label for="remuneracionSi">Sí</label>
-                        <input type="radio" id="remuneracionSi" name="pago" value="remuneracionSi" required>
-                        <label for="remuneracionNo">No</label>
-                        <input type="radio" id="remuneracionNo" name="pago" value="remuneracionNo" required>
-                        </div>
-                    </section>
-                </div>
-                <div class="sectionParrafoCuatro">
-                    <p>
-                        Si tienes alguna duda escríbenos directamente a: hugopicsnphotos@outlook.com
-                    </p>
-                </div>
-            </article>
+        <section class="contactos">
+            <div class="logo-messenger">
+                <img src="../assets/imagenes/messenger .png" alt="Logo messenger">
+            </div>
+            <div class="logo-whatsapp" >
+                <img src="../assets/imagenes/whatsapp (2).png" alt="Logo whatsapp">
+            </div>
+            <div  class="logo-telefono">
+                <img src="../assets/imagenes/phone.png" alt="Logo teléfono">
+            </div>
+            <div class="imagen-operadores">
+                <img class="operadores" src="../assets/imagenes/Operadores.png" alt="Operadores telefónicos">
+            </div>
+        </section>
+        <section class="recuerda">
+            <h2>Recuerda que atendemos tus mensajes y llamadas
+                <br>de lunes a sábado en un horario de 9 am a 7 pm.
+            </h2>
         </section>
     </main>
     <footer>
-        <Section class="sectionFooter">
-            <a title="Facebook" href="https://www.facebook.com/" target="_blank"><img
+        <section class="section-footer">
+            <a title="Facebook" href="https://www.facebook.com/" target="_blank"><img class="imagen-redes"
                     src="../assets/imagenes/logo_facebook.png" alt="Logo Facebook"></a>
-            <a title="Twitter" href="https://twitter.com/?lang=es" target="_blank"><img
+            <a title="Twitter" href="https://twitter.com/?lang=es" target="_blank"><img class="imagen-redes"
                     src="../assets/imagenes/Logo_twitter.png" alt="Logo Twitter"></a>
-            <a title="Instagram" href="https://www.instagram.com" target="_blank"><img
+            <a title="Instagram" href="https://www.instagram.com" target="_blank"><img class="imagen-redes"
                     src="../assets/imagenes/logo_instagram.png" alt="Logo Instagram"></a>
-            <a title="Pinterest" href="https://www.pinterest.com.mx/" target="_blank"><img
-                    src="../assets/imagenes/logo_pinterest.png" alt="Logo Pinterest"></a>
-            <a title="Threads" href="https://www.threads.net/" target="_blank"><img
-                    src="../assets/imagenes/logo_threads.png" alt="Logo Threads"></a>
-            <h6>Copyright© Hugo Miguel - All rights reserved</h6>
-        </Section>
+        </section>
+        <section class="footer-copyright">
+            <div>
+                <ul class="lista-opiniones">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Opiniones</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">Sucursales</a></li>
+                    <li><a href="#">Preguntas frecuentes</a></li>
+                </ul>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2023 Orient SA. de. CV.</p>
+            </div>
+        </section>
     </footer>
 </body>
 
