--- a/pages/material.html
+++ b/pages/material.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ORIENT</title>
+    <title>Material</title>
     <link rel="shortcut icon" href="../assets/imagenes/home_orient_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -46,7 +46,7 @@
                     cursos: <b>medicina, administración, diseño, ingeniería, arquitectura y programación. <br><br> Tendrás a la mano desde explicaciones tipo recordatorio sobre los temas, así como múltiples
                         ejercicios y prácticas perfectamente explicadas para que sigas aumentanto tu expertiz.</b></p>
                 <p class="p-2-manual"><br>Costo:<b>$45 USD</b><br><br>
-                    Disposición: <b>Envío a domicilio y sucursales.</b></p>
+                    Disposición: <b>Envío a domicilio y compra directa en sucursales.</b></p>
             </div>
         </section>
         <section class="formulario-2023">
@@ -58,7 +58,7 @@
                 <p class="p-1-formulario">Nuestro formulario de ingeniería 2023 contiene todas las fórmulas, tablas y conversiones que abarcamos en nuestros
                     curso de ingeniería: <b>leyes de signos, derivadas, integrales, jerarquías, factorización, etc. <br><br> Tendrás a la mano todo esto para que puedas memorizarlo de manera más rápida, pues incluye estrategias, mnemotecnias y consejos para que no se te olviden.</b></p>
                 <p class="p-2-formulario"><br>Costo:<b>$20 USD</b><br><br>
-                    Disposición: <b>Envío a domicilio y sucursales.</b></p>
+                    Disposición: <b>Envío a domicilio y compra directa en sucursales.</b></p>
             </div>
         </section>
     </main>
