--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -36,18 +36,33 @@
                 </h1>
             </div>
         </section>
-        <section class="contactos">
-            <div class="logo-messenger">
-                <img src="../assets/imagenes/messenger .png" alt="Logo messenger">
+        <section class="medios-de-contacto">
+            <div class="whatsapp-contacto">
+                <button><a href="https://www.whatsapp.com/?lang=es_LA" target="_blank">
+                        <img src="../assets/imagenes/whatsapp.png" alt="Whatsapp">
+                    <p>
+                        WhatsApp
+                    </p>
+                </a></button>
             </div>
-            <div class="logo-whatsapp" >
-                <img src="../assets/imagenes/whatsapp (2).png" alt="Logo whatsapp">
+            <div class="messenger-contacto">
+                <button><a href="https://www.messenger.com/" target="_blank">
+                    <img src="../assets/imagenes/messenger.png" alt="Messenger">
+                <p>
+                    Messenger
+                </p>
+            </a></button>
             </div>
-            <div  class="logo-telefono">
-                <img src="../assets/imagenes/phone.png" alt="Logo teléfono">
+            <div class="telefono-contacto">
+                <button><a href="#" target="_blank">
+                    <img src="../assets/imagenes/phone.png" alt="Teléfono">
+                <p>
+                    Llámanos
+                </p>
+            </a></button>
             </div>
-            <div class="imagen-operadores">
-                <img class="operadores" src="../assets/imagenes/Operadores.png" alt="Operadores telefónicos">
+            <div class="callcenter-contacto">
+                <img src="../assets/imagenes/operadores.png" alt="Operadores">
             </div>
         </section>
         <section class="recuerda">
