Agregué media 1024 a Cursos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,28 +38,34 @@
         </section>
         <section class="medios-de-contacto">
             <div class="whatsapp-contacto">
-                <button><a href="https://www.whatsapp.com/?lang=es_LA" target="_blank">
+                <button>
+                    <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank">
                         <img src="../assets/imagenes/whatsapp.png" alt="Whatsapp">
-                    <p>
-                        WhatsApp
-                    </p>
-                </a></button>
+                        <p>
+                            WhatsApp
+                        </p>
+                    </a>
+                </button>
             </div>
             <div class="messenger-contacto">
-                <button><a href="https://www.messenger.com/" target="_blank">
-                    <img src="../assets/imagenes/messenger.png" alt="Messenger">
-                <p>
-                    Messenger
-                </p>
-            </a></button>
+                <button>
+                    <a href="https://www.messenger.com/" target="_blank">
+                        <img src="../assets/imagenes/messenger.png" alt="Messenger">
+                        <p>
+                            Messenger
+                        </p>
+                    </a>
+                </button>
             </div>
             <div class="telefono-contacto">
-                <button><a href="#" target="_blank">
-                    <img src="../assets/imagenes/phone.png" alt="Teléfono">
-                <p>
-                    Llámanos
-                </p>
-            </a></button>
+                <button>
+                    <a href="#" target="_blank">
+                        <img src="../assets/imagenes/phone.png" alt="Teléfono">
+                        <p>
+                            Llámanos
+                        </p>
+                    </a>
+                </button>
             </div>
             <div class="callcenter-contacto">
                 <img src="../assets/imagenes/operadores.png" alt="Operadores">
