--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -121,7 +121,7 @@
             <div class="tarjeta-ingenieria">
                 <a href="#">
                     <h2 class="titulo-tarjeta-ingenieria">INGENIERÍA</h2>
-                    <p class="parrafo-superior-ingenieria">Curso de introducción al área de ingenierías.</p>
+                    <p class="parrafo-superior-ingenieria">Curso de introducción al área de las ingenierías.</p>
                     <img class="imagen-profesion" src="../assets/imagenes/clase-virtual.png" alt="Ingeniería">
                     <p class="disponible-tarjeta">DISPONIBLE<br>VIRTUAL (CLASES PREGRABADAS)</p>
                     <p class="descripcion-tarjeta">Curso de introducción al área de ingenierías. <br>
