Terminé el media en Material.html

--- a/pages/examenes.html
+++ b/pages/examenes.html
@@ -280,7 +280,8 @@
                 <h1>DUDAS</h1>
             </div>
             <div class="instruccion-dudas">
-                <p>Si tienes dudas sobre alguno de nuestros exámenes u horarios, envíanos un mensaje o llámanos mediante nuestra sección de "Contacto". <br>Te atendemos de 9 am a 7 pm de lunes a viernes.</p>
+                <p>Si tienes dudas sobre alguno de nuestros exámenes u horarios, envíanos un mensaje o llámanos mediante
+                    nuestra sección de "Contacto". <br>Te atendemos de 9 am a 7 pm de lunes a viernes.</p>
             </div>
         </section>
 
