--- a/pages/material.html
+++ b/pages/material.html
@@ -42,8 +42,10 @@
             </div>
             <div class="descripcion-manual-2023">
                 <h2>Manual general de ejercicios 2023</h2>
-                <p class="p-1-manual">Nuestro manual de ejercicios 2023 contiene los temas de todas las áreas que abarcamos en nuestros
-                    cursos: <b>medicina, administración, diseño, ingeniería, arquitectura y programación. <br><br> Tendrás a la mano desde explicaciones tipo recordatorio sobre los temas, así como múltiples
+                <p class="p-1-manual">Nuestro manual de ejercicios 2023 contiene los temas de todas las áreas que
+                    abarcamos en nuestros
+                    cursos: <b>medicina, administración, diseño, ingeniería, arquitectura y programación. <br><br>
+                        Tendrás a la mano desde explicaciones tipo recordatorio sobre los temas, así como múltiples
                         ejercicios y prácticas perfectamente explicadas para que sigas aumentanto tu expertiz.</b></p>
                 <p class="p-2-manual"><br>Costo:<b>$45 USD</b><br><br>
                     Disposición: <b>Envío a domicilio y compra directa en sucursales.</b></p>
@@ -55,8 +57,11 @@
             </div>
             <div class="descripcion-formulario-2023">
                 <h2>Formulario de Ingeniería 2023</h2>
-                <p class="p-1-formulario">Nuestro formulario de ingeniería 2023 contiene todas las fórmulas, tablas y conversiones que abarcamos en nuestros
-                    curso de ingeniería: <b>leyes de signos, derivadas, integrales, jerarquías, factorización, etc. <br><br> Tendrás a la mano todo esto para que puedas memorizarlo de manera más rápida, pues incluye estrategias, mnemotecnias y consejos para que no se te olviden.</b></p>
+                <p class="p-1-formulario">Nuestro formulario de ingeniería 2023 contiene todas las fórmulas, tablas y
+                    conversiones que abarcamos en nuestros
+                    curso de ingeniería: <b>leyes de signos, derivadas, integrales, jerarquías, factorización, etc.
+                        <br><br> Tendrás a la mano todo esto para que puedas memorizarlo de manera más rápida, pues
+                        incluye estrategias, mnemotecnias y consejos para que no se te olviden.</b></p>
                 <p class="p-2-formulario"><br>Costo:<b>$20 USD</b><br><br>
                     Disposición: <b>Envío a domicilio y compra directa en sucursales.</b></p>
             </div>
