--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -49,7 +49,8 @@
                         enfermería.
                     </p>
                 </a>
-                    <a href="#"><ul class="lista-de-contenido">
+                <a href="#">
+                    <ul class="lista-de-contenido">
                         <li>Anatomía</li>
                         <li>Embriología Humana</li>
                         <li>Historología</li>
@@ -107,7 +108,8 @@
                 <h1>REGISTRO:</h1>
             </div>
             <div class="instruccion-registro">
-                <p>Para ver los horarios disponibles y hacer tu registro a cualquiera de nuestros cursos haz clic sobre él.</p>
+                <p>Para ver los horarios disponibles y hacer tu registro a cualquiera de nuestros cursos haz clic sobre
+                    él.</p>
             </div>
         </section>
         <section>
@@ -186,12 +188,12 @@
             <a title="Facebook" href="https://www.facebook.com/" target="_blank"><img class="imagen-redes"
                     src="../assets/imagenes/logo_facebook.png" alt="Logo Facebook"></a>
             <a title="Twitter" href="https://twitter.com/?lang=es" target="_blank"><img class="imagen-redes"
-                    src="../assets/imagenes/Logo_twitter.png" alt="Logo Twitter"></a> 
+                    src="../assets/imagenes/Logo_twitter.png" alt="Logo Twitter"></a>
             <a title="Instagram" href="https://www.instagram.com" target="_blank"><img class="imagen-redes"
                     src="../assets/imagenes/logo_instagram.png" alt="Logo Instagram"></a>
         </section>
         <section class="footer-copyright">
-            <div >
+            <div>
                 <ul class="lista-opiniones">
                     <li><a href="#">Inicio</a></li>
                     <li><a href="#">Opiniones</a></li>
