--- a/index.html
+++ b/index.html
@@ -7,31 +7,31 @@
     <title>ORIENT</title>
     <link rel="shortcut icon" href="./assets/imagenes/home_orient_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
 <body>
-    <header class="bg-dark pt-4 container-fluid">
-        <div class="row">
-            <a href="index.html" class="col-sm-12 col-md-4 col-lg-7 ps-5">
-                <img src="./assets/imagenes/home.png" alt="Logo ORIENT">
-            </a>
-            <nav class="col-sm-12 col-md-8 col-lg-5 pe-5">
-                <ul class="d-flex gap-5 pt-4  justify-content-end">
-                    <li><a href="./pages/cursos.html">Cursos</a></li>
-                    <li><a href="./pages/examenes.html">Exámenes simulacro</a></li>
-                    <li><a href="./pages/material.html">Material</a></li>
-                    <li><a href="./pages/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
+    <header>
+        <section class="barra-de-navegacion">
+            <div class="logo-esquina">
+                <a href="../index.html"><img src="../assets/imagenes/home.png" alt="Inicio"></a>
+            </div>
+            <div>
+                <nav class="nav-cursos">
+                    <ul>
+                        <li><a href="./pages/cursos.html">Cursos</a></li>
+                        <li><a href="./pages/examenes.html">Exámenes simulacro</a></li>
+                        <li><a href="./pages/material.html">Material</a></li>
+                        <li><a href="./pages/contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
     </header>
-    <main class="container-fluid">
-        <section class="primera-seccion row bg-black pt-5">
-            <div class="col-sm-12 col-md-6 col-lg-6">
-                <p class="titulo-principal text-end">Explota todas tus capacidades.</p>
-                <p class="descripcion-orient pt-4 pb-5 text-end">Orient® es una institución en donde conocemos lo
+    <main>
+        <section class="primera-seccion">
+            <div>
+                <p class="titulo-principal">Explota todas tus capacidades.</p>
+                <p class="descripcion-orient">Orient® es una institución en donde conocemos lo
                     difícil que <br>
                     es querer sobresalir sin tener una ventaja previa sobre los demás.
                     <br>
@@ -39,64 +39,45 @@
                     ¡Vuélvete el mejor en lo que quieres ser!
                 </p>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-6 text-center">
-                <img class="imagen-quimico" src="./assets/imagenes/bioquimico.png" alt="Quimico">
+            <div class="segunda-seccion">
+                <img src="./assets/imagenes/bioquimico.png" alt="Quimico">
             </div>
         </section>
-        <section class="row bg-dark contenedor-de-fotos">
-            <div class="col-sm-12 col-md-6 col-lg-7">
+        <section class="contenedor-de-fotos">
+            <div>
                 <p class="titulo-pregunta">¿Quiénes conformamos el equipo de Orient®?</p>
             </div>
-            <div id="carouselExampleCaptions" class="carousel slide col-sm-12 col-md-6 col-lg-4">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./assets/imagenes/persona 1.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Juan Manuel González</h5>
-                            <p>Médico cirujano graduado con honores de la UNAM.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/imagenes/persona 2.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Sofia Pérez Prado</h5>
-                            <p>Diseñadora y artista gráfica multirreconocida.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/imagenes/persona 3.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Jaime Facún</h5>
-                            <p>Contador e inversionista de la bolsa de valores.</p>
-                        </div>
+            <div class="fotos-personas">
+                <div class="persona">
+                    <img src="./assets/imagenes/persona-1.jpg" alt="...">
+                    <div class="carousel-caption">
+                        <h5>Juan Manuel González</h5>
+                        <p>Médico cirujano graduado con honores de la UNAM.</p>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+                <div class="persona">
+                    <img src="./assets/imagenes/persona-2.jpg" alt="...">
+                    <div class="carousel-caption">
+                        <h5>Sofia Pérez Prado</h5>
+                        <p>Diseñadora y artista gráfica multirreconocida.</p>
+                    </div>
+                </div>
+                <div class="persona">
+                    <img src="./assets/imagenes/persona-3.jpg" alt="...">
+                    <div class="carousel-caption">
+                        <h5>Jaime Facún</h5>
+                        <p>Contador e inversionista de la bolsa de valores.</p>
+                    </div>
+                </div>
+            </div>
             </div>
             </div>
         </section>
-        <section class="row bg-black contenedor-surgimiento">
-            <div class="col-sm-12 col-md-6 col-lg-7">
-                <p class="surgimiento text-center">¿Cómo surgió Orient®?</p>
+        <section class="contenedor-surgimiento">
+            <div>
+                <p class="surgimiento">¿Cómo surgió Orient®?</p>
             </div>
-            <div class=" col-sm-12 col-md-6 col-lg-4 text-white surgimiento-parrafo border border-warning rounded-5">
+            <div class="surgimiento-parrafo">
                 <p>Cuando ya tienes una idea de cuál es tu vocación y te quieres dedicar a ello, es fácil que te
                     apasione, pero esto no basta para sobresalir en un mundo tan competitivo como en el que nos
                     encontramos. <br> <br>Pensamos que si cada futuro médico, ingeniero, contador, diseñador, etc.
@@ -108,11 +89,11 @@
                 </p>
             </div>
         </section>
-        <section class="row bg-dark contenedor-dedicacion">
-            <div class="col-sm-12 col-md-6 col-lg-7">
+        <section class="contenedor-dedicacion">
+            <div>
                 <p class="pregunta-dedicacion">¿A qué nos dedicamos?</p>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 dedicacion-parrafo text-white border border-warning rounded-5">
+            <div class="dedicacion-parrafo">
                 <p>Contamos con 3 áreas: Administración, Diseño y Medicina. <br> <br>
                     Dependiendo del área de aprendizaje a la que te dirijas, te llevará 6 meses aprender desde temas y
                     conceptos básicos, realizar prácticas y utilizar programas y herramientas que te enseñarán hasta que
@@ -124,22 +105,30 @@
             </div>
         </section>
     </main>
-    <footer class="bg-black container-fluid">
-        <ul class="texto-footer nav justify-content-center border-bottom pb-3 pt-5 mb-3">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-dark-emphasis">Inicio</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-dark-emphasis">Opiniones</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-dark-emphasis">Contacto</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-dark-emphasis">Sucursales</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-dark-emphasis">Preguntas frecuentes</a></li>
-        </ul>
-        <p class="texto-footer text-center text-dark-emphasis pb-3 pt-4">&copy; 2023 Orient SA. de. CV.</p>
+    <footer>
+        <section class="section-footer">
+            <a title="Facebook" href="https://www.facebook.com/" target="_blank"><img class="imagen-redes"
+                    src="../assets/imagenes/logo_facebook.png" alt="Logo Facebook"></a>
+            <a title="Twitter" href="https://twitter.com/?lang=es" target="_blank"><img class="imagen-redes"
+                    src="../assets/imagenes/Logo_twitter.png" alt="Logo Twitter"></a>
+            <a title="Instagram" href="https://www.instagram.com" target="_blank"><img class="imagen-redes"
+                    src="../assets/imagenes/logo_instagram.png" alt="Logo Instagram"></a>
+        </section>
+        <section class="footer-copyright">
+            <div>
+                <ul class="lista-opiniones">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Opiniones</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">Sucursales</a></li>
+                    <li><a href="#">Preguntas frecuentes</a></li>
+                </ul>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2023 Orient SA. de. CV.</p>
+            </div>
+        </section>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
