Agregué animaciones y mixins al index.html

--- a/index.html
+++ b/index.html
@@ -48,26 +48,26 @@
                 <p class="titulo-pregunta">¿Quiénes conformamos el equipo de Orient®?</p>
             </div>
             <div class="fotos-personas">
-                <div class="persona">
+                <a href=""><div class="persona">
                     <img src="./assets/imagenes/persona-1.jpg" alt="...">
-                    <div class="carousel-caption">
+                    <div>
                         <h5>Juan Manuel González</h5>
                         <p>Médico cirujano graduado con honores de la UNAM.</p>
                     </div>
                 </div>
-                <div class="persona">
+                <a href=""><div class="persona">
                     <img src="./assets/imagenes/persona-2.jpg" alt="...">
-                    <div class="carousel-caption">
+                    <div>
                         <h5>Sofia Pérez Prado</h5>
                         <p>Diseñadora y artista gráfica multirreconocida.</p>
-                    </div>
+                    </div></a>
                 </div>
-                <div class="persona">
+                <a href=""><div class="persona">
                     <img src="./assets/imagenes/persona-3.jpg" alt="...">
-                    <div class="carousel-caption">
+                    <div>
                         <h5>Jaime Facún</h5>
                         <p>Contador e inversionista de la bolsa de valores.</p>
-                    </div>
+                    </div></a>
                 </div>
             </div>
             </div>
