Terminé cursos.html y su SASS

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -28,7 +28,7 @@
         </section>
     </header>
     <main>
-        <section>
+        <section class="titulos">
             <div class="titulos-superiores">
                 <h2>¡Poca disponibilidad!</h2>
                 <h1>
@@ -38,7 +38,7 @@
         </section>
         <section class="section-grids">
             <div class="tarjeta-medicina">
-                <a href="#">
+                <a href="" class="medicina">
                     <h2 class="titulo-tarjeta-medicina">MEDICINA</h2>
                     <p class="parrafo-superior-medicina">Curso de introducción al área de medicina.</p>
                     <img class="imagen-profesion" src="../assets/imagenes/doctor.png" alt="Doctor">
@@ -48,8 +48,6 @@
                         conocimientos básicos e intermedios, así como experiencia básica en el área de la medicina y la
                         enfermería.
                     </p>
-                </a>
-                <a href="#">
                     <ul class="lista-de-contenido">
                         <li>Anatomía</li>
                         <li>Embriología Humana</li>
@@ -61,7 +59,7 @@
                 </ul>
             </div>
             <div class="tarjeta-administracion">
-                <a href="">
+                <a href="" class="administracion">
                     <h2 class="titulo-tarjeta-administracion">ADMINISTRACIÓN</h2>
                     <p class="parrafo-superior-administracion">Curso de introducción al área de administración.</p>
                     <img class="imagen-profesion" src="../assets/imagenes/contador.png" alt="Contador">
@@ -83,7 +81,7 @@
                 </a>
             </div>
             <div class="tarjeta-diseño">
-                <a href="">
+                <a href="" class="diseño">
                     <h2 class="titulo-tarjeta-diseño">DISEÑO</h2>
                     <p class="parrafo-superior-diseño">Curso de introducción al área de diseño general.</p>
                     <img class="imagen-profesion" src="../assets/imagenes/disenador.png" alt="Diseñador">
