Terminé examenes.html y su SASS

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -38,7 +38,7 @@
         </section>
         <section class="section-grids">
             <div class="tarjeta-medicina">
-                <a href="" class="medicina">
+                <a href="#" class="medicina">
                     <h2 class="titulo-tarjeta-medicina">MEDICINA</h2>
                     <p class="parrafo-superior-medicina">Curso de introducción al área de medicina.</p>
                     <img class="imagen-profesion" src="../assets/imagenes/doctor.png" alt="Doctor">
@@ -55,8 +55,8 @@
                         <li>Bioquímica Humana</li>
                         <li>Fisiología Humana</li>
                         <li>Técnicas quirúrgicas (taller)</li>
+                    </ul>
                 </a>
-                </ul>
             </div>
             <div class="tarjeta-administracion">
                 <a href="" class="administracion">
@@ -136,8 +136,8 @@
                         <li>Cálculo diferencial e integral</li>
                         <li>Geometría analítica</li>
                         <li>Matemáticas aplicadas (taller)</li>
-                </a>
-                </ul>
+                    </ul>
+                    </a>
             </div>
             <div class="tarjeta-arquitectura">
                 <a href="">
