Agregué los media queries a cursos.html

--- a/pages/material.html
+++ b/pages/material.html
@@ -49,6 +49,11 @@
                         ejercicios y prácticas perfectamente explicadas para que sigas aumentanto tu expertiz.</b></p>
                 <p class="p-2-manual"><br>Costo:<b>$45 USD</b><br><br>
                     Disposición: <b>Envío a domicilio y compra directa en sucursales.</b></p>
+            </div>            
+        </section>
+        <section>
+            <div class="boton">
+                <a href=""><button class="boton-manual">Adquiérelo aquí</button></a>
             </div>
         </section>
         <section class="formulario-2023">
@@ -64,6 +69,11 @@
                         incluye estrategias, mnemotecnias y consejos para que no se te olviden.</b></p>
                 <p class="p-2-formulario"><br>Costo:<b>$20 USD</b><br><br>
                     Disposición: <b>Envío a domicilio y compra directa en sucursales.</b></p>
+            </div>
+        </section>
+        <section>
+            <div class="boton">
+                <a href=""><button class="boton-manual">Adquiérelo aquí</button></a>
             </div>
         </section>
     </main>
