Agregué SEO a index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="cursos, vocación, preparación, experiencia, examen">
+    <meta name="description" content="Haz de tu pasión tu vocación. Ayudamos a futuros profesionistas a que comiencen a adentrarse a sus áreas de estudio y tengan ventaja en un mundo sumamente competitivo.">
+    <meta name="author" content="Hugo Miguel">
+    <meta name="copyright" content="Hugo Corp">
+    <meta property="og:type" content=website>
     <title>ORIENT</title>
     <link rel="shortcut icon" href="./assets/imagenes/home_orient_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
@@ -31,7 +36,7 @@
         <section class="primera-seccion">
             <div>
                 <p class="titulo-principal">Explota todas tus capacidades.</p>
-                <p class="descripcion-orient">Orient® es una institución en donde conocemos lo
+                <p class="descripcion-orient"><strong>Orient®</strong> es una institución en donde conocemos lo
                     difícil que <br>
                     es querer sobresalir sin tener una ventaja previa sobre los demás.
                     <br>
@@ -45,7 +50,7 @@
         </section>
         <section class="contenedor-de-fotos">
             <div>
-                <p class="titulo-pregunta">¿Quiénes conformamos el equipo de Orient®?</p>
+                <p class="titulo-pregunta">¿Quiénes conformamos el equipo de <strong>Orient®</strong>?</p>
             </div>
             <div class="fotos-personas">
                 <a href=""><div class="persona">
@@ -78,12 +83,12 @@
                 <p class="surgimiento">¿Cómo surgió Orient®?</p>
             </div>
             <div class="surgimiento-parrafo">
-                <p>Cuando ya tienes una idea de cuál es tu vocación y te quieres dedicar a ello, es fácil que te
+                <p>Cuando ya tienes una idea de cuál es tu <strong>vocación</strong> y te quieres dedicar a ello, es fácil que te
                     apasione, pero esto no basta para sobresalir en un mundo tan competitivo como en el que nos
                     encontramos. <br> <br>Pensamos que si cada futuro médico, ingeniero, contador, diseñador, etc.
                     comenzara a prepararse con temas acorde a sus profesiones mucho antes de que la escuela
                     lo solicite, entonces tendrás una ventaja en cuanto a conocimientos y una pequeña
-                    experiencia en el campo. <br> Como ya lo comprobamos, ¡esto sin duda te hará resaltar como una
+                    experiencia en el campo. <br> Como ya lo comprobamos, ¡esto sin duda te hará <strong>resaltar</strong> como una
                     esfera entre cubos!.
                     <br> <br> Así es como nace ORIENT®.
                 </p>
