Terminé de agregar SEO

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos</title>
+    <meta name="keywords" content="cursos, preparacion, clases, orientación, universidad">
+    <meta name="description" content="Aquí puedes revisar las áreas para las que contamos con un curso.">
+    <meta name="author" content="Hugo Miguel">
+    <meta name="copyright" content="Hugo Corp">
+    <meta property="og:type" content=website>
+    <title>Cursos | ORIENT</title>
     <link rel="shortcut icon" href="../assets/imagenes/home_orient_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
