--- a/pages/examenes.html
+++ b/pages/examenes.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exámenes</title>
+    <meta name="keywords" content="examen, simulacro, prueba, universidad, preparación">
+    <meta name="description" content="Estos son los exámenes cimulacro con los que contamos para que estudies.">
+    <meta name="author" content="Hugo Miguel">
+    <meta name="copyright" content="Hugo Corp">
+    <meta property="og:type" content=website>
+    <title>Exámenes simulacro | ORIENT</title>
     <link rel="shortcut icon" href="../assets/imagenes/home_orient_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
