--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <meta name="keywords" content="contacto, teléfonos, whatsapp, instagram, facebook">
+    <meta name="description" content="Siempre puedes contactarnos por estos medios.">
+    <meta name="author" content="Hugo Miguel">
+    <meta name="copyright" content="Hugo Corp">
+    <meta property="og:type" content=website>
+    <title>Contacto | ORIENT</title>
     <link rel="shortcut icon" href="../assets/imagenes/home_orient_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
