--- a/pages/material.html
+++ b/pages/material.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Material</title>
+    <meta name="keywords" content="material, estudio, preparación, guía, ejercicios">
+    <meta name="description" content="En Orient® contamos con material adicional para que estudies, aquí puedes revisarlo.">
+    <meta name="author" content="Hugo Miguel">
+    <meta name="copyright" content="Hugo Corp">
+    <meta property="og:type" content=website>
+    <title>Material | ORIENT</title>
     <link rel="shortcut icon" href="../assets/imagenes/home_orient_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
