Corregí errores de logo en index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <section class="barra-de-navegacion">
             <div class="logo-esquina">
-                <a href="../index.html"><img src="../assets/imagenes/home.png" alt="Inicio"></a>
+                <a href="./index.html"><img src="./assets/imagenes/home.png" alt="Inicio"></a>
             </div>
             <div>
                 <nav class="nav-cursos">
