Arreglé problemas de vínculos de imágenes

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
     <footer>
         <section class="section-footer">
             <a title="Facebook" href="https://www.facebook.com/" target="_blank"><img class="imagen-redes"
-                    src="../assets/imagenes/logo_facebook.png" alt="Logo Facebook"></a>
+                    src="./assets/imagenes/logo_facebook.png" alt="Logo Facebook"></a>
             <a title="Twitter" href="https://twitter.com/?lang=es" target="_blank"><img class="imagen-redes"
-                    src="../assets/imagenes/Logo_twitter.png" alt="Logo Twitter"></a>
+                    src="./assets/imagenes/logo_twitter.png" alt="Logo Twitter"></a>
             <a title="Instagram" href="https://www.instagram.com" target="_blank"><img class="imagen-redes"
-                    src="../assets/imagenes/logo_instagram.png" alt="Logo Instagram"></a>
+                    src="./assets/imagenes/logo_instagram.png" alt="Logo Instagram"></a>
         </section>
         <section class="footer-copyright">
             <div>
